--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "nodeunit tests"
   },
   "keywords": [
-    "SMTP", "sendmail", "Nodemailer", "email"
+    "SMTP",
+    "sendmail",
+    "Nodemailer",
+    "email"
   ],
   "author": "Andris Reinman",
   "license": "MIT",
