Use tildes instead of carets for dependency listing

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "author": "Andris Reinman",
   "license": "MIT",
   "dependencies": {
-    "simplesmtp": "^0.3.30"
+    "simplesmtp": "~0.3.30"
   },
   "devDependencies": {
     "nodeunit": "~0.8.2"
